--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,30 @@ Most likely it will not be used in the project. */
 
 body {
     background-color: rgb(50, 50, 50);
+    /* add fonts */
     font-family: 'Kode Mono', monospace;
     font-family: 'Ante-Regular';
+    /* manipulation to put footer down */
+    min-height: 100vh;
+    margin: 0; padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* border for body */
+    border: 1px solid greenyellow;
   }
   
+  header {
+    /* border for header */
+    border: 1px solid red;
+  }
+  
+  footer {
+    /* border for footer */
+    border: 1px solid blueviolet
+  }
+  
+  /* styling for h1 */
   h1 {
     color: white;
     text-align: center;
