--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ a font created by myself
 as a training and experiment. 
 Most likely it will not be used in the project. */
 @font-face {
-  font-family: Ante-Regular;
+  font-family: 'Ante-Regular';
   src: url("./assets/fonts/Ante-Regular.otf");
 }
 
@@ -11,11 +11,27 @@ Most likely it will not be used in the project. */
   box-sizing: border-box;
 }
 
+/* styles for containers */
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+/* styles for navigation */
+.navigation_list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-family: Koda Mono, monospace;
+  font-size: 16px;
+}
+
 body {
     background-color: rgb(50, 50, 50);
     /* add fonts */
-    font-family: 'Kode Mono', monospace;
-    font-family: 'Ante-Regular';
+    /* font-family: 'Kode Mono', monospace;
+    font-family: 'Ante-Regular'; */
+
     /* manipulation to put footer down */
     min-height: 100vh;
     margin: 0; padding: 0;
@@ -26,11 +42,12 @@ body {
     border: 1px solid greenyellow;
   }
   
-  .container {
-    max-width: 1440px;
-    margin: 0 auto;
-  }
 
+/* smooth scrolling */
+html {
+    scroll-behavior: smooth;
+  }
+  
   header {
     /* border for header */
     border: 1px solid red;
