--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 /* It's just an attempt to connect 
-a font created by myself
-as a training and experiment. 
+a font created by myself as a training and experiment. 
 Most likely it will not be used in the project. */
 @font-face {
   font-family: 'Ante-Regular';
@@ -13,7 +12,7 @@ Most likely it will not be used in the project. */
 
 /* styles for containers */
 .container {
-  max-width: 1440px;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
